update soft skills and certification

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 								<hr>
 								
 								<section class="resume-skills-section resume-section">
-									<h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3"><i class="resume-section-heading-icon bi bi-person-gear me-2"></i>Soft Skills</h3>
+									<h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3"><i class="resume-section-heading-icon bi bi-person-gear me-2"></i>Skills</h3>
 									<ul class="list-inline">
 										<li class="list-inline-item"><span class="badge resume-skill-badge">Analytical Skills</span></li>
 										<li class="list-inline-item"><span class="badge resume-skill-badge">Project Management</span></li>
@@ -182,9 +182,9 @@
 								<section class="resume-projects-section resume-section">
 									<h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3"><i class="resume-section-heading-icon bi bi-code-slash me-2"></i>Certifications</h3>
 									<div class="item">
-										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://certificate.givemycertificate.com/c/97f784da-133f-4bb1-8adb-f37b81840ad4">PCAP-Certified Associate in Python Programming</a></h4>
+										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://certificate.givemycertificate.com/c/97f784da-133f-4bb1-8adb-f37b81840ad4">PCAP-Certified Associate in Python</a></h4>
 										<div class="item-desc">
-											Issued Mar 2024Issued Mar 2024 
+											Issued Mar 2024 
 											<br>
 											Credential ID 97f784da-133f-4bb1-8adb-f37b81840ad4
 										</div>
