--- a/index.html
+++ b/index.html
@@ -181,12 +181,85 @@
 
 								<section class="resume-projects-section resume-section">
 									<h3 class="resume-section-heading text-uppercase py-2 py-lg-3 py-3"><i class="resume-section-heading-icon bi bi-code-slash me-2"></i>Certifications</h3>
+									
 									<div class="item">
 										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://certificate.givemycertificate.com/c/97f784da-133f-4bb1-8adb-f37b81840ad4">PCAP-Certified Associate in Python</a></h4>
 										<div class="item-desc">
 											Issued Mar 2024 
 											<br>
 											Credential ID 97f784da-133f-4bb1-8adb-f37b81840ad4
+										</div>
+									</div><!--//item-->
+									<div class="item">
+										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.udemy.com/certificate/UC-bdc235b5-cea6-4b0b-a15d-1bc35e190e27">Python for Beginners - Learn Python Progamming</a></h4>
+										<div class="item-desc">
+											Issued Jan 2022 
+											<br>
+											Credential ID UC-bdc235b5-cea6-4b0b-a15d-1bc35e190e27
+										</div>
+									</div><!--//item-->									
+									<div class="item">
+										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.udemy.com/certificate/UC-bdc235b5-cea6-4b0b-a15d-1bc35e190e27">Python Django - The practical guide</a></h4>
+										<div class="item-desc">
+											Issued Dec 2021 
+											<br>
+											Credential ID UC-bb47650d-a537-457f-b7d0-9e2dc2a6fd7b
+										</div>
+									</div><!--//item-->
+									<div class="item">
+										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.coursera.org/account/accomplishments/certificate/FH6JNYD3QP28">Automating Real-World Tasks with Python</a></h4>
+										<div class="item-desc">
+											Issued Aug 2021 
+											<br>
+											Credential ID FH6JNYD3QP28
+										</div>
+									</div><!--//item-->
+									<div class="item">
+										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.coursera.org/account/accomplishments/specialization/certificate/KCJ9J7CY23VP">Google IT Automation with Python Specialization</a></h4>
+										<div class="item-desc">
+											Issued Aug 2021 
+											<br>
+											Credential ID KCJ9J7CY23VP
+										</div>
+									</div><!--//item-->
+									<div class="item">
+										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.coursera.org/account/accomplishments/certificate/88DJ7TT9PMUV">Configuration Management and the Cloud</a></h4>
+										<div class="item-desc">
+											Issued May 2021 
+											<br>
+											Credential ID 88DJ7TT9PMUV
+										</div>
+									</div><!--//item-->
+									<div class="item">
+										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.coursera.org/account/accomplishments/certificate/WSTX9AMVMR2R">Troubleshooting and Debugging Techniques</a></h4>
+										<div class="item-desc">
+											Issued May 2021 
+											<br>
+											Credential ID WSTX9AMVMR2R
+										</div>
+									</div><!--//item-->
+									<div class="item">
+										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.coursera.org/account/accomplishments/certificate/FBZ7ADKWTT86">Introduction to Git and GitHub</a></h4>
+										<div class="item-desc">
+											Issued Mar 2021 
+											<br>
+											Credential ID FBZ7ADKWTT86
+										</div>
+									</div><!--//item-->
+									<div class="item">
+										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.coursera.org/account/accomplishments/certificate/VYU45RJA2KPF">Using Python to Interact with the Operating System</a></h4>
+										<div class="item-desc">
+											Issued Jan 2021 
+											<br>
+											Credential ID VYU45RJA2KPF
+										</div>
+									</div><!--//item-->
+									<div class="item">
+										<h4 class="item-heading"><i class="item-icon bi bi-square-fill me-2"></i><a href="https://www.coursera.org/account/accomplishments/certificate/ZMAH565RARYZ">Crash Course on Python</a></h4>
+										<div class="item-desc">
+											Issued Oct 2020 
+											<br>
+											Credential ID ZMAH565RARYZ
 										</div>
 									</div><!--//item-->
 								</section>
