--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 				<div class="top-bar text-center position-relative">
 					<div class="top-bar-inner">
 						<ul class="social-list list-inline mx-auto">
-							<li class="list-inline-item me-0 me-md-1 me-lg-2"><a href="https://github.com/syiand"><i class="fa-brands fa-github fa-fw"></i></a></li>
+							<li class="list-inline-item me-0 me-md-1 me-lg-2"><a href="https://www.linkedin.com/in/savvas-yiannopoulos7/"><i class="fa-brands fa-linkedin-in"></i></a></li>
 						</ul><!--//social-list-->
 					</div><!--//top-bar-inner-->
 				</div><!--//top-bar-->
